--- a/CSS/style.css
+++ b/CSS/style.css
@@ -6,10 +6,37 @@ body{
 .navBar ul{
      list-style-type: none; /* removes the bullets. A navbar doesnt need list markers */
      margin: 0;
-     padding: 0; /* to remover the browser default settings */
-
+     padding: 0;
+     /* to remover the browser default settings */
+     overflow: hidden;
+     background-color: #403D39;
+     position: fixed;
+     top: 0;
+     width: 100%;
 }
 .navBar li {
-     display: block;
-     width: 60px;
+     float: left;
+     border-right: 1px solid #bbb;
+}
+.navBar li {
+     display: block; /* removes the line breaks before and after each list item
+     to be able to display them on one line*/
+     text-align: center;
+     padding: 14px 16px;
+     text-decoration: none;
+}
+.navBar li a:hover {
+     background-color: #403D39;
+}
+.navBar li:last-child{
+     border-right:none;
+}
+.active {
+     background-color: #FFFCF2;
+}
+
+h1{
+     color: #AA6373;
+     text-align: center;
+
 }
